Showcase With Overlay & Button Style

--- a/index.html
+++ b/index.html
@@ -26,8 +26,21 @@
         <li><a href="about.html">About</a></li>
       </ul>
     </div>
-
   </nav>
+
+    <!-- Showcase -->
+    <header id="showcase">
+      <div class="container">
+        <div class="showcase-container">
+          <div class="showcase-content">
+            <div class="category category-sports">Sports</div>
+            <h1>Some Sports Article</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta voluptatum adipisci dolorum cupiditate beatae nam nisi assumenda reiciendis qui dolore, culpa accusamus, tempora facilis ea labore architecto laboriosam ipsum esse?</p>
+            <a href="article.html" class="btn btn-primary">Read More</a>
+          </div>
+        </div>
+      </div>
+    </header>
   
 </body>
 </html>
